apps/vaultwarden/components/tailscale/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  annotations:
    tailscale.com/proxy-class: nishir-vaultwarden
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
